<resources>
    <string name="app_name">MyBird</string>
    <string name="account_already_exists_please_check_again">Account already exists, please check again</string>
    <string name="create">Create</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">create account</string>
    <string name="emailTxt">Email</string>
    <string name="check_if_email_is_valid_password_length_must_be_over_6_characters">Check if email is valid, password length must be over 6 characters, nickname length must be over 3 and under 6 characters without numbers and special characters</string>
    <string name="login_failed_please_check_your_information_again">Login failed, please check your information again!</string>
    <string name="if_you_do_not_have_an_account_please_click_here">If you do not have an account, please click here</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <string name="wait_a_moment_for_verification">Wait a moment for verification</string>
    <string name="check_email_reset_password">Please check your email and follow the steps to reset your password</string>
    <string name="reset_password_fail">Password reset request failed, please re-authenticate</string>
    <string name="email_dose_not_exist">Email does not exist, please check again</string>
    <string name="error_connect">There is a problem with the connection, please check again.</string>
    <string name="achievement_ranking">Achievement Ranking</string>
    <string name="search">Search</string>
    <string name="no_name">---</string>
    <string name="bird">Bird</string>
    <string name="sound">Sound</string>
    <string name="language">Language</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="confirm">Confirm</string>
    <string name="name_game">My Flappy Brid</string>
    <string name="forgot_password_text">Forgot password</string>
    <string name="shop">Shop</string>
    <string name="bird_used">Bird Used:</string>
    <string name="internet_interrupted">Internet connection is interrupted</string>
    <string name="internet_granted">Internet access is granted</string>
    <string name="internet_denied">Internet access is denied</string>
    <string name= "allow_applications_to_access_the_Internet">Allow applications to access the Internet?</string>
    <string name= "you_need_to_press_OK_to_continue_playing">You need to press OK to continue playing</string>
</resources>