<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#96FFFF"
    android:backgroundTint="#96FFFF">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/name_game"
        android:fontFamily="@font/font_mybird_default"
        android:textSize="32sp"
        android:textColor="@color/txt_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />


    <TextView
        android:id="@+id/BirdTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="368dp"
        android:text="@string/bird"
        android:fontFamily="@font/font_mybird_default"
        android:textSize="20sp"
        android:textColor="@color/txt_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SoundTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sound"
        android:fontFamily="@font/font_mybird_default"
        android:textSize="20sp"
        android:textColor="@color/txt_color"
        app:layout_constraintStart_toStartOf="@+id/BirdTxt"
        app:layout_constraintTop_toBottomOf="@+id/BirdTxt" />

    <TextView
        android:id="@+id/languageTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/language"
        android:fontFamily="@font/font_mybird_default"
        android:textSize="20sp"
        android:textColor="@color/txt_color"
        app:layout_constraintStart_toStartOf="@+id/SoundTxt"
        app:layout_constraintTop_toBottomOf="@+id/SoundTxt" />

    <CheckBox
        android:id="@+id/soundOnCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:text="@string/on"
        android:fontFamily="@font/font_mybird_default"
        android:textSize="16sp"
        android:textColor="@color/txt_color"
        app:layout_constraintBottom_toBottomOf="@+id/SoundTxt"
        app:layout_constraintStart_toStartOf="@+id/SoundTxt"
        app:layout_constraintTop_toTopOf="@+id/SoundTxt" />

    <CheckBox
        android:id="@+id/soundOffCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:text="@string/off"
        android:fontFamily="@font/font_mybird_default"
        android:textSize="16sp"
        android:textColor="@color/txt_color"
        app:layout_constraintBottom_toBottomOf="@+id/soundOnCB"
        app:layout_constraintStart_toStartOf="@+id/soundOnCB"
        app:layout_constraintTop_toTopOf="@+id/soundOnCB" />

    <CheckBox
        android:id="@+id/lgEnCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:fontFamily="@font/font_mybird_default"
        android:textSize="16sp"
        android:textColor="@color/txt_color"
        app:layout_constraintBottom_toBottomOf="@+id/languageTxt"
        app:layout_constraintStart_toStartOf="@+id/soundOnCB"
        app:layout_constraintTop_toTopOf="@+id/languageTxt" />

    <CheckBox
        android:id="@+id/lgViCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vietnamese"
        android:fontFamily="@font/font_mybird_default"
        android:textSize="16sp"
        android:textColor="@color/txt_color"
        app:layout_constraintBottom_toBottomOf="@+id/lgEnCB"
        app:layout_constraintStart_toStartOf="@+id/soundOffCB"
        app:layout_constraintTop_toTopOf="@+id/lgEnCB"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/confirmBtn"
        android:layout_width="160dp"
        android:layout_height="73dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/confirm_button_en" />

    <ImageView
        android:id="@+id/birdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/BirdTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/bird1_down" />

    <ImageButton
        android:id="@+id/preBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/BirdTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/pre_button" />

    <ImageButton
        android:id="@+id/nextBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/BirdTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/next_button" />

    <TextView
        android:id="@+id/birdNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Funny Bird"
        android:fontFamily="@font/font_mybird_default"
        android:textSize="20sp"
        android:textColor="@color/txt_color"
        app:layout_constraintBottom_toBottomOf="@+id/BirdTxt"
        app:layout_constraintStart_toStartOf="@+id/soundOnCB"
        app:layout_constraintTop_toTopOf="@+id/BirdTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>